# localai-cli

./: Cargo.toml  LICENSE  README.md  doc.json  flake.nix
.github/: dependabot.yml
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml  lint.yml  nix-build.yml  nix-format.yml
docs/spec/: tui-design.md
src/: client.rs  discover.rs  main.rs  tui.rs
